# elleauto

./: CMakeLists.txt  README.md  clock.html
.github/workflows/: windows-build.yml
include/: miner_types.h
lib/: OpenCL.def
src/: autolykos.cl  main.cpp  opencl_manager.cpp  opencl_stub.cpp  stratum_parser.cpp
